--- a/main.html
+++ b/main.html
@@ -10,6 +10,32 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header><h1>Speghetti Recipe</h1></header>
+	<section><h2>Ingredients</h2></section>
+	<main>
+		<section>
+			<ul>
+				<li>Spaghetti</li>
+				<li>Marinara Sauce</li>
+				<li>Salt</li>
+				<li>Water</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Instructions</h2>
+			<ol type="1">
+				<li>Bring water to a boil.</li>
+				<li>Add spaghetti to boiling water.</li>
+					<ol type="1">
+						<li>Add salt to taste.</li>
+						<li>Cook for 10 minutes, stirring occasionally.</li>
+					</ol>
+				<li>Add marinara sauce to a pan, bringing to a simmer.</li>
+				<li>Mix cooked spaghetti with marinara sauce.</li>
+				<li>Enjoy!</li>
+			</ol>
+		</section>
+	</main>
 
 </body>
 
